crates/lang/tests/ui/contract/fail/message-input-non-codec.stderr
error[E0277]: the trait bound `NonCodecType: WrapperTypeDecode` is not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:18:31
   |
18 |         pub fn message(&self, _input: NonCodecType) {}
   |                               ^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodecType`
   |
   = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodecType`
note: required by a bound in `DispatchInput`
  --> src/codegen/dispatch/type_check.rs
   |
   |     T: scale::Decode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchInput`

error[E0277]: the trait bound `NonCodecType: WrapperTypeDecode` is not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:18:9
   |
18 |         pub fn message(&self, _input: NonCodecType) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodecType`
   |
   = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodecType`

error[E0277]: the trait bound `NonCodecType: WrapperTypeEncode` is not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:18:9
   |
18 |         pub fn message(&self, _input: NonCodecType) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodecType`
   |
   = note: required because of the requirements on the impl of `Encode` for `NonCodecType`
note: required by a bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`
  --> $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   |         T: scale::Encode,
   |            ^^^^^^^^^^^^^ required by this bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`

error[E0599]: the method `fire` exists for struct `ink_env::call::CallBuilder<DefaultEnvironment, Set<ink_env::call::Call<DefaultEnvironment, ink_env::AccountId, u64, u128>>, Set<ExecutionInput<ArgumentList<ink_env::call::utils::Argument<NonCodecType>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>>>, Set<()>>`, but its trait bounds were not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:18:9
   |
18 |         pub fn message(&self, _input: NonCodecType) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `ink_env::call::CallBuilder<DefaultEnvironment, Set<ink_env::call::Call<DefaultEnvironment, ink_env::AccountId, u64, u128>>, Set<ExecutionInput<ArgumentList<ink_env::call::utils::Argument<NonCodecType>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>>>, Set<()>>` due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   | pub struct ArgumentList<Head, Rest> {
   | ----------------------------------- doesn't satisfy `_: Encode`
   |
   = note: the following trait bounds were not satisfied:
           `ArgumentList<ink_env::call::utils::Argument<NonCodecType>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>: Encode`
